--- a/files/RichEmail.html
+++ b/files/RichEmail.html
@@ -325,10 +325,10 @@
     }
     bt1.style.top = (offs+39) + 'px'; bt0.style.top = (offs+13) + 'px';
     
-    let a = w>800?'800px':'', Zoom = 1;
+    let a = w>800?'800px':'';
     /*if(/Android|iPhone|iPad|iPod|BlackBerry|IEMobile|Windows Phone/i.test(window.navigator.userAgent)) {
       a = '340px';
-      Zoom = Math.floor((w-M)/340*100)/100;
+      let Zoom = Math.floor((w-M)/340*100)/100;
       h = Math.floor(h/Zoom);
       document.body.style.zoom = Zoom;
     }*/
