--- a/files/RichEmail.html
+++ b/files/RichEmail.html
@@ -172,7 +172,7 @@
 
   </style>
 </head>
-<body style="font-size:12pt" margin='10px' onResize='reSize()'>
+<body style="font-size:12pt;margin:10px" onResize='reSize()'>
   
   <button id='clpBoard' onClick='toClipBoard(this)' title='Copy in Clipboard' class="keyBtn fa fa-scissors"></button>
   <button id='showHide' onClick='reSize()' title='Show/Hide the Pannel' class="keyBtn fa fa-sort-desc"></button>
